<resources>
    <string name="app_name">AJT</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="welcome_member">Welcome</string>
    <string name="enter_your_information_below_or_login_with_a_social_account">Enter your information below</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="reset">Reset</string>
    <string name="enter_the_email_address_you_used_to_create_your_account_and_we_will_email_you_a_link_to_resetyour_password">Enter the email address you used to create your account and we will email you a link to reset your password</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="us">Us</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="title_activity_maps">Map</string>
    <string name="firstname_validation">Please enter your First Name</string>
    <string name="lastname_validation">Please enter your Last Name</string>
    <string name="emptyemail_validation">Please enter your email address</string>
    <string name="email_validation">Please enter valid email address</string>
    <string name="username_validation">Please enter Username</string>
    <string name="emptyphone_validation">Please Enter phone number</string>
    <string name="phone_length_validation">Please enter valid phone number</string>
    <string name="emptypassword_validation">Please enter your password</string>
    <string name="password_length_validation">Password should be greater than 6</string>
    <string name="no_internet">Please check your Internet Connection</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="old_password_validation">Please enter your Old Password</string>
    <string name="new_pass_validation">Please enter New Password</string>
    <string name="reenter_new_pass">Please Re-enter your New Password</string>
    <string name="pass_confirmpass_notmatch">Password and Confirm password do not match</string>
    <string name="no_jobs_available">No Jobs Available</string>
    <string name="in_progress">In Progress</string>
    <string name="upcoming">Upcoming Jobs</string>
    <string name="past_jobs">Past Jobs</string>
    <string name="rejected_jobs">Rejected Jobs</string>
    <string name="completed_jobs">Completed Jobs</string>
    <string name="all_jobs">All Jobs</string>
    <string name="choose_start_time">Choose start time</string>
    <string name="choose_end_time">Choose End time</string>
    <string name="time_should_not_same">Start time and End time should not be same</string>
    <string name="write_note">Please write note</string>
</resources>
