<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:id="@+id/root"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarSize="0dp"
        tools:context=".activities.Login">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:padding="12dp"
            tools:context=".activities.Login">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/small_logo" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/reset"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo"
                 />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="30sp"
                app:layout_constraintLeft_toRightOf="@id/label_welcome"
                app:layout_constraintTop_toBottomOf="@id/logo" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="4dp"
                android:id="@+id/label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_email_address_you_used_to_create_your_account_and_we_will_email_you_a_link_to_resetyour_password"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_welcome" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingTop="24dp"
                android:paddingRight="8dp"
                android:paddingBottom="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_name">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/email_address"
                    android:textColorHint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/label_name" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/underline"
                    app:layout_constraintEnd_toEndOf="@id/et_email"
                    app:layout_constraintStart_toStartOf="@id/et_email"
                    app:layout_constraintTop_toBottomOf="@+id/et_email" />

            </androidx.appcompat.widget.LinearLayoutCompat>




            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    app:srcCompat="@mipmap/arrow" />

            </com.google.android.material.card.MaterialCardView>



            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="2dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:rotation="180"
                    app:srcCompat="@mipmap/arrow" />

            </com.google.android.material.card.MaterialCardView>




        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>