<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="@string/welcome_member"
                android:textColor="@color/lightblack2"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="Member"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="30sp"
                app:layout_constraintLeft_toRightOf="@id/label_welcome"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/enter_your_information_below_or_login_with_a_social_account"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_welcome" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingTop="24dp"
                android:paddingRight="8dp"
                android:paddingBottom="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_info">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:textSize="@dimen/edittext"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="First Name"
                    android:textColorHint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/et_email" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/underline"
                    app:layout_constraintEnd_toEndOf="@id/et_username"
                    app:layout_constraintStart_toStartOf="@id/et_username"
                    app:layout_constraintTop_toBottomOf="@+id/et_email" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_marginTop="24dp"
                    android:textSize="@dimen/edittext"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="Last Name"
                    android:textColorHint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/et_email" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/underline"
                    app:layout_constraintEnd_toEndOf="@id/et_username"
                    app:layout_constraintStart_toStartOf="@id/et_username"
                    app:layout_constraintTop_toBottomOf="@+id/et_email" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/edittext"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="Email address"
                    android:textColorHint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/label_name" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/underline"
                    app:layout_constraintEnd_toEndOf="@id/et_email"
                    app:layout_constraintStart_toStartOf="@id/et_email"
                    app:layout_constraintTop_toBottomOf="@+id/et_email" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:textSize="@dimen/edittext"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/username"
                    android:textColorHint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/et_email" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/underline"
                    app:layout_constraintEnd_toEndOf="@id/et_username"
                    app:layout_constraintStart_toStartOf="@id/et_username"
                    app:layout_constraintTop_toBottomOf="@+id/et_email" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/white"
                    android:inputType="number"
                    android:textSize="@dimen/edittext"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/phone"
                    android:textColorHint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/et_email" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/underline"
                    app:layout_constraintEnd_toEndOf="@id/et_phone"
                    app:layout_constraintStart_toStartOf="@id/et_phone"
                    app:layout_constraintTop_toBottomOf="@+id/et_username" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:textSize="@dimen/edittext"
                    android:inputType="textPassword"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/password"
                    android:textColorHint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/et_email" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/underline"
                    app:layout_constraintEnd_toEndOf="@id/et_pass"
                    app:layout_constraintStart_toStartOf="@id/et_pass"
                    app:layout_constraintTop_toBottomOf="@+id/et_phone" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    app:srcCompat="@mipmap/arrow" />

            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</LinearLayout>