<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarSize="0dp"
        tools:context=".activities.Login">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:padding="12dp"
            tools:context=".activities.Login">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/contact"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/us"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="30sp"
                app:layout_constraintLeft_toRightOf="@id/label_contact"
                app:layout_constraintTop_toTopOf="parent" />



            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingTop="24dp"
                android:paddingRight="8dp"
                android:paddingBottom="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_contact">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="Email address"
                    android:textColorHint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/label_name" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/underline"
                    app:layout_constraintEnd_toEndOf="@id/et_email"
                    app:layout_constraintStart_toStartOf="@id/et_email"
                    app:layout_constraintTop_toBottomOf="@+id/et_email" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="Name"
                    android:textColorHint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/et_email" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/underline"
                    app:layout_constraintEnd_toEndOf="@id/et_username"
                    app:layout_constraintStart_toStartOf="@id/et_username"
                    app:layout_constraintTop_toBottomOf="@+id/et_email" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:textColorHint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/et_email" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/underline"
                    app:layout_constraintEnd_toEndOf="@id/et_phone"
                    app:layout_constraintStart_toStartOf="@id/et_phone"
                    app:layout_constraintTop_toBottomOf="@+id/et_username" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="Message"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="4"
                    android:textColorHint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/et_email" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/underline"
                    app:layout_constraintEnd_toEndOf="@id/et_pass"
                    app:layout_constraintStart_toStartOf="@id/et_pass"
                    app:layout_constraintTop_toBottomOf="@+id/et_phone" />

            </androidx.appcompat.widget.LinearLayoutCompat>




            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    app:srcCompat="@mipmap/arrow" />

            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>